--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ ul{
 }
 
 body{
-    background-image: url('assets/bg.jpg');
+    background-image: url(./assets/bg.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 100% auto;
